# Purview-Migration

./: .gitignore  New Text Document.txt  README.md  pyproject.toml
docs/: PRE-FLIGHT-CHECKLIST.md
examples/: DELETE-AND-RECREATE-WORKFLOW.md  manifest-shape.json  purview_migration_fabric.ipynb  runbook.md
scripts/: delete-and-recreate.sh
src/purview_migration/: __init__.py  __main__.py  cli.py  client.py  constants.py  exporter.py  importer.py  io_utils.py  lakehouse_export.py  models.py  relink.py  relink_executor.py  report_generator.py  script_generator.py  validator.py
tests/: test_cli_helpers.py  test_script_generator.py
