[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purview-migration-toolkit"
version = "0.1.0"
description = "Export and import Microsoft Purview artifacts across tenants."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "azure-core>=1.28.0,<2.0.0",
  "azure-identity>=1.15.0,<2.0.0",
  "requests>=2.32.3",
]

[project.scripts]
purview-migrate = "purview_migration.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
